--- a/iesrtutorial.Rmd
+++ b/iesrtutorial.Rmd
@@ -22,6 +22,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Extraction/Indexing
 
+## Random Numbers
+
 ## Vectorization
 
 ## Toolkit
@@ -33,6 +35,10 @@ knitr::opts_chunk$set(echo = TRUE)
 ### `fread`/`data.table`
 
 ## Regressions
+
+### OLS (`lm`)
+
+### Probit/Logit (`glm`)
 
 ## Reshaping
 
@@ -65,6 +71,8 @@ knitr::opts_chunk$set(echo = TRUE)
 # Dynamic/Interactive Output: `shiny`
 
 # Appendix
+
+## Data Cleaning
 
 ## Source Code
 
