--- a/iesrtutorial.Rmd
+++ b/iesrtutorial.Rmd
@@ -16,6 +16,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 First and foremost is to install R (following instructions [here](http://lib.stat.cmu.edu/R/CRAN/)) so that your computer knows how to interpret R code. Then, I highly recommend you install RStudio (following instructions [here](https://www.rstudio.com/products/rstudio/download/)), which is a powerful program for organizing your interaction with the R language (a subtle distinction, and you wouldn't really be ill-served by considering RStudio and R to be the same thing); for the jargon-hungry, RStudio is an Integrated Development Environment (IDE) for the R language.
 
+***
+***
+***
 # R Basics (8 AM - 9 AM)
 
 Before we get to the fun stuff (statistical analysis), it's important that we gain some facility with doing basic things in R first -- adding numbers, creating objects, and tools for exploring/understanding new objects as we come across them, including understanding and overcoming common errors that can creep into our code.
@@ -24,7 +27,7 @@ First things first, let's follow the time-honored tradition of making R say "Hel
 
 Make sure you're in the console (the cursor in front of the right angle bracket (`>`) should be blinking) and type (or copy-paste) the following:
 
-```{r}
+```{r hello}
 print("Hello World")
 ```
 
@@ -35,11 +38,12 @@ More common is to run code from an R script. You can create an R script in RStud
 
 Once we save our R script, we can easily share it with coauthors or the general public (or even ourselves, on a different computer), who can simply run the code again on their machine to reproduce your analysis. 
 
+***
 ## Assignment
 
 Consider the following:
 
-```{r}
+```{r assign_scalar}
 x = 3
 ```
 
@@ -51,7 +55,7 @@ Assignment has to pass from right to left -- the _object_ on the right of `=` is
 
 The opposite is an error, since we haven't told R what `y` is yet:
 
-```{r, error = TRUE}
+```{r assign_error, error = TRUE}
 3 = y
 ```
 
@@ -61,20 +65,21 @@ This error tells us that `3` is not a valid thing to which to assign; as a rule 
 > >  `x <- 3`
 > > this method of assignment is probably more common, but we'll stick with using `=` today since I think it's more intuitive. The differences between `=` and `<-` are all-but irrelevant for beginners, but for future reference, [this Q&A](http://stackoverflow.com/questions/1741820/) is worth a read: 
 
+***
 ## Vectors
 
 The easiest way to think of a vector is as a column (or a row) in Excel. A column in excel can contain many numbers, but instead of referring to each of them individually, we refer to the row. Typically, these numbers all have something in common (for example, a column Name in Excel should be filled with peoples' names).
 
 The way to declare vectors in R is using `c`, which stands for _**c**_oncatenate:
 
-```{r}
+```{r assign_vector}
 x <- c(1, 2, 3, 4)
 x
 ```
 
 Now `x` contains four numbers. Note that since this type of sequence is so common, R has built in the colon (`:`) as an operator to create a variable like this more quickly/concisely:
 
-```{r}
+```{r assign_sequence}
 x <- 1:4
 x
 #Also works in reverse
@@ -82,11 +87,12 @@ x <- 4:1
 x
 ```
 
+***
 ## Types
 
 Thus far, everything we've assigned to a variable has been a number. But this is _far_ from the only thing we can assign to a variable in R. Consider:
 
-```{r}
+```{r assign_non_numeric}
 x <- c("Philadelphia", "Pennsylvania")
 y <- c(TRUE, FALSE)
 z <- c(1L, 2L)
@@ -102,13 +108,13 @@ z <- c(1L, 2L)
 
 Consider this:
 
-```{r}
+```{r assign_coerce}
 x <- c(1, 2L, TRUE, "America")
 ```
 
 All four components of `x` are of different type (namely, `numeric`, `integer`, `logical`, `character`). Recall above that we said vectors must have something in common, but as we declared it, this couldn't be further from the truth. In fact, R will force all of these components to have the same type -- namely, character:
 
-```{r}
+```{r assign_coerce_print}
 x
 ```
 
@@ -118,14 +124,14 @@ Note the quotation marks -- none of the components are any longer considered as 
 
 However, mixing types is a fundamental feature of almost all data analysis, so it stands to reason that there is a straightforward way to do so. In R, this is done with the `list` type. We can replace the code above using `list`:
 
-```{r}
+```{r assign_list}
 x <- list(1, 2L, TRUE, "America")
 x
 ```
 
 Note how different the output looks, as compared to using `c`!! The quotation marks are gone except for the last component. You can ignore the mess of `[[` and `[` for now, but as an intimation, consider some more complicated `list`s:
 
-```{r}
+```{r assign_lists}
 x <- list(c(1, 2), c("a", "b"), c(TRUE, FALSE), c(5L, 6L))
 x
 
@@ -137,11 +143,12 @@ y
 
 `y` is a _nested_ `list` -- it's a `list` that has `list`s for some of its components. This is very useful for more advanced operations, but probably won't come up for quite some time, so don't worry if you haven't wrapped your head around this yet.
 
+***
 ## Extraction/Indexing
 
 Consider a simple `numeric` vector:
 
-```{r}
+```{r extract_assign}
 x <- 5:14
 ```
 
@@ -149,7 +156,7 @@ How do we get at the various numbers stored in certain positions in `x`? For exa
 
 This process is called _extraction_, and, for vectors, is done with square brackets (`[]`), e.g.:
 
-```{r}
+```{r extract_vector}
 x[1] #first element of x
 
 x[5] #fifth element of x
@@ -157,7 +164,7 @@ x[5] #fifth element of x
 
 This also works on `list`s, but `list`s also have some other ways to get at their contents:
 
-```{r}
+```{r extract_list}
 y <- list(1:3, 4:6, 7:9)
 y[1]
 ```
@@ -166,7 +173,7 @@ Note that the output still has `[[` in it. This means the result of `y[1]` is _s
 
 More typically, we want to _remove_ the `list` structure and just get `1:3` instead of `list(1:3)`. To do this, we use `[[`:
 
-```{r}
+```{r extract_list_item}
 y[[1]]
 ```
 
@@ -174,7 +181,7 @@ y[[1]]
 
 It is also possible to name the elements of vectors and lists. This is convenient for making it easy to get certain elements without having to remember whether you stored it first, third, or whatever:
 
-```{r}
+```{r extract_named}
 x <- c("Iowa" = "Cruz", "Ohio" = "Kasich", "Pennsylvania" = "Trump")
 
 y <- list(names = c("Kasich", "Cruz", "Trump"),
@@ -184,13 +191,13 @@ y <- list(names = c("Kasich", "Cruz", "Trump"),
 
 For named vectors, we keep using `[]` to extract elements, but we can use the name instead of the index:
 
-```{r}
+```{r extract_named_vector}
 x["Iowa"]
 ```
 
 For named `list`s, we can use `[]`, but, as with numbered indices, we'll get a `list` in return. If we want the actual object contained at that point in the list, we can still use `[[`, or we can also use `$`, which is another extraction operator:
 
-```{r}
+```{r extract_named_list}
 #now that y has names, we no longer see [[ -- instead, we see
 #  the name of each element of the list
 y["ages"]
@@ -206,7 +213,7 @@ As often as not, when we need to extract, we need _more than one_ element of the
 
 To do this, we _pass a vector to `[]`_. It's must intuitive when we need elements in sequence, e.g.:
 
-```{r}
+```{r extract_sequence}
 # R conveniently keeps the letters of the
 #   alphabet stored automatically in two
 #   vectors, letters and LETTERS;
@@ -222,19 +229,19 @@ What if we need the first and 5th elements, but not the 3rd/4th/5th elements?
 
 Remember that `1:5` is the same as `c(1, 2, 3, 4, 5)`. So we could have just used the latter:
 
-```{r}
+```{r extract_sequence_long}
 x[c(1, 2, 3, 4, 5)]
 ```
 
 By extension, if we just want the first and fifth elements:
 
-```{r}
+```{r extract_non_adjacent}
 x[c(1, 5)]
 ```
 
 _**NOTE**_: there's no* way to extract multiple elements using the other extraction operators, `[[` and `$`. It's an error to try:
 
-```{r, error = TRUE}
+```{r extract_errors, error = TRUE}
 x <- list(a = 1:3, b = 4:6)
 #multiple extraction by names works fine:
 x[c("a", "b")]
@@ -255,7 +262,7 @@ Here, we must introduce the logical operators (also called _binary operators_, w
 
 These are `<`, `>`, `<=`, `>=`, `==`, and `!=`. These are all the same in Stata (note: `~=`, which works in Stata as an alternate to `!=`, _doesn't work in R_). First, let's explore them:
 
-```{r}
+```{r logical_operators}
 ages <- c(12, 14, 16, 18, 20, 22, 24, 30,
           38, 40, 55, 60, 63, 66, 68, 70)
 
@@ -273,7 +280,7 @@ Note that R automatically figures out whether _each element_ of `ages` satisfies
 
 The way to extend this to extraction is simple:
 
-```{r}
+```{r extract_logical}
 #Only take people under age 18
 ages[ages < 18]
 
@@ -288,13 +295,13 @@ The other common logical operations are intersection, union and negation, aka **
 
 Quickly, let's get working-agers:
 
-```{r}
+```{r extract_logical_pair}
 ages[ages >= 18 & ages <= 65]
 ```
 
 We can combine these to our heart's fancy and create any combination of logical requirements, e.g.:
 
-```{r}
+```{r extract_logical_chain}
 #get people who are over 18, but not exactly 34 or 70
 ages[ages >= 18 & !(ages == 34 | ages == 70)]
 ```
@@ -305,15 +312,305 @@ Sometimes, we'd rather _exclude_ a small number of elements, rather than _includ
 
 To do this, we precede the vector we want to extract with `-` (if it's `numeric`/`integer`/`character`) or `!` (if it's `logical`). 
 
+Suppose we wanted to find out how many years have passed since our earliest observation, and to exclude the earliest observation. We might do something like:
+
+```{r extract_negate}
+years <- c(1970, 1973, 1978, 1980, 1990, 1995)
+#the earliest year is 1970, which comes first; to exclude:
+years[-1]
+#to exclude and subtract 1970:
+years[-1] - years[1]
+```
+
+***
 ## Base functions
 
+R comes equipped with a vast (_vast_) library of built-in functions intended to make your life as a data analyst as easy as possible. As of this writing I count 1,203 functions included in base R, and 2,374 total functions that come ready to use as soon as you open up RStudio.
+
+These are the real work horses of R, and many of them should be familiar to Excel and Stata users. Like in those programs, functions are distinguished by the use of parentheses `()` (in fact we've already used many functions to this point, most obviously the concatentation function `c`). We won't be able to get anyhwere near understanding all of the multitudinous functions R makes available to us today, but we can make a start.
+
+### Basic Arithmetic/Stats
+
+Finding the sum of a column in Excel is sort of a pain. You have to write `=SUM(` and then highlight all the proper cells. It's kind of a pain in Stata as well. You either have to `summarize var` the variable and run `di r(sum)` or create a new variable with `egen sum_var = sum(var)`. I find this and many other artihmetic operations much simpler to do in R.
+
+```{r basic_arithmetic}
+x <- 1:10
+
+#find the sum
+sum(x)
+
+#find the mean
+mean(x)
+
+#find the variance and standard deviation
+var(x)
+sd(x)
+
+#scalar arithmetic
+3 * x
+x - 2
+x^2
+x / 4
+
+#exponentials
+exp(1:3)
+log(1:10)
+
+#other arithmetic
+abs(-5:5)
+
+#rounding up/down
+x <- c(.1, 1.1, 1.9, 2, 2.8)
+floor(x)
+ceiling(x)
+```
+
+### Function arguments
+
+Most functions accept more than one argument. Consider rounding a number:
+
+```{r round}
+x <- c(1.12, 10.2, 1.56, 21.9, 2)
+round(x)
+
+#round to 1 digit past the decimal
+round(x, 1)
+
+#round to -1 digit past the decimal
+#  (i.e., 1 digit befor the decimal)
+round(x, -1)
+```
+
+There's no limit to the number of arguments a function can accept to accomplish a wide variety of tasks. With `round`, it's easy to handle this because there are only two arguments -- first, a vector of numbers, and second, a (single) number of digits to which to round the vector.
+
+When the number of arguments balloons, however, it gets more and more difficult to keep track of which argument goes where.
+
+Consider the `quantile` function, which takes 5 arguments -- `x`, a vector of numbers; `probs`, a vector of probabilities (quantiles); `na.rm`, which tells it whether to ignore missing data (more on that later); `names`, which tells R whether the result should be named (see example); and `type`, which tells R the algorithm to use for measuring the quantiles (there are 9 readily available).
+
+It would be quite a pain to expect users to memorize the order in which `quantile` expects arguments, especially if we had to do so for every function we ever wanted to use (remember, there are _thousands_). To facilitate this, R allows us to _name_ our arguments.
+
+```{r function_named_arguments}
+x <- c(1, 1, 1, 2, 3, 4, 5, 6, 
+       7, 8, 8, 8, 9, 10, 10, 10)
+
+#by default, quantile calculates all 5 quartiles:
+#  min, 25%-ile, median, 75%-ile, max
+quantile(x)
+median(x)
+
+#if we just want the median
+quantile(x, .5)
+#or, we can name it to be explicit
+quantile(x, probs = .5)
+
+#if we want to exclude the names
+quantile(x, probs = .5, names = FALSE)
+```
+
+In addition to making it easier for us as analysts to use the functions, naming arguments also makes it easier for _others_ to read our code. While it's fair to expect most users to know the basic functions and their arguments pretty well, the more advanced the function is that you're using, the more understandable your code gets when aided by named arguments.
+
+### Infix operators and `match`
+
+_Infix operators_ are things that are written from left to right like basic arithmetic, but which do things not covered by the five main arithmetic operators (`+`, `-`, `*`, `/`, `^`). These operators in R are always surrounded by two percent signs (`%`). The two math-y ones have to do with modular arithmetic:
+
+```{r modular_arithmetic}
+x <- 1:20
+# integer division
+x %/% 3
+# modular division (remainder)
+x %% 3
+```
+
+By far the most commonly used infix, though, has to be `%in%`. This is used to determine whether some objects (the left) can be found in another set (the right). Best with an example:
+
+```{r %in%}
+candidates <- 
+  c("Bernie Sanders", "Hillary Clinton", "Lincoln Chafee", 
+    "Jim Webb", "Laurence Lessig", "Donald Trump", "John Kasich",
+    "Ted Cruz", "Marco Rubio", "Jeb Bush", "Ben Carson",
+    "Carly Fiorina", "Lindsey Graham", "Chris Christie",
+    "Rick Santorum", "Rand Paul", "Jim Gilmore", "Mike Huckabee",
+    "George Pataki", "Bobby Jindal", "Scott Walker", "Rick Perry")
+
+nominees <- c("Hillary Clinton", "Donald Trump")
+
+candidates %in% nominees
+```
+
+A quick note that what `%in%` is actually doing is using the `match` function, which is also useful. `match` takes three arguments. The first and second are like the left- and right-hand side of `%in%`, respectively. `match` tries to find each element of the left in the right, and, if it's found, gives the position. The third argument, `nomatch` tells it what to do when the left element is _not_ found. Example:
+
+```{r match}
+color <- c("red", "green", "orange", "blue",
+           "purple", "teal", "mahogany", "yellow",
+           "orange", "white", "lavendar")
+
+roygbiv <- c("red", "orange", "yellow", "green",
+             "blue", "indigo", "violet")
+
+#%in% tells you if each element of
+#  color is in roygbiv at all
+color %in% roygbiv
+
+#match tells you WHERE in roygbiv 
+#  each element of color was found;
+#  we set no.match to say what
+#  we expect when the color isn't found
+#  (it must be an integer)
+match(color, roygbiv, nomatch = -1)
+```
+
+### More useful functions
+
+#### `length`
+
+Length is used to find how many elements something has (in data, how many observations there are)
+
+```{r length}
+x <- 1:50
+length(x)
+```
+
+#### `rep`
+
+`rep` is used to _**rep**_eat an object a certain number of times. The `each` argument repeats each element a set number of times. `length.out` makes sure the output has a certain number of elements.
+
+```{r rep}
+rep(1:3, 4)
+
+rep(1:3, each = 4)
+
+rep(1:3, each = 4, length.out = 10)
+```
+
+#### `unique` / `duplicated`
+
+`unique` eliminates all duplicates of a vector; `duplicated` returns a `logical` vector telling you which elements appeared earlier in the vector.
+
+```{r unique/duplicated}
+x <- c(1, 1, 1, 2, 2, 3)
+unique(x)
+duplicated(x)
+### unique is the same as (but faster than) x[!duplicated(x)]
+x[!duplicated(x)]
+
+#unique is often used in conjunction with length
+#  to find out the number of IDs in a vector, e.g.
+length(unique(x))
+```
+
+#### `seq`
+
+`seq` produces a _**seq**_uence. It has four main arguments: `to` (where to start), `from` (where to end), `by` (increment), and `length.out` (what should be the `length` of the result?). We must specify no more than 3 of these. Some examples:
+
+```{r seq}
+#same as 1:10
+seq(10)
+
+#same as 2:11
+seq(2, 11)
+
+#make a grid from 0 to 10 with 30 points;
+#  R automatically figures out the increment
+seq(0, 10, length.out = 30)
+
+#get all the odd numbers from 1 to 50:
+#  note that the upper endpoint won't
+#  necessarily be included in the output
+seq(1, 50, by = 2)
+```
+
+#### `sort`
+
+`sort` will give an ordered version of its input. Default is increasing order; use the `decreasing` argument to reverse this.
+
+```{r sort}
+x <- c(1, 2, 4, -1, 8, 9, 20, 13, 0)
+sort(x)
+sort(x, decreasing = TRUE)
+```
+
+#### `paste` / `paste0`
+
+`paste` and `paste0` are R's ways of concatenating strings, i.e., combining them together. `paste` has an argument `sep` which tells how to _**sep**_arate the components; `paste0` is a slightly faster version of `sep` that uses `sep = ""` (i.e., don't separate the output). The `collapse` argument, available to both, will reduce a vector to a single string, using `collapse` to separate. Examples:
+
+```{r paste}
+first <- c("Sam", "Charles", "Matthew", "Thom")
+last <- c("Beam", "Mingus", "Embree", "Yorke")
+
+#default sep is a space, sep = " "
+paste(first, last)
+paste(last, first, sep = ", ")
+paste(last, first, collapse = ", ")
+paste0(first, last, collapse = ", ")
+```
+
+***
 ## Random Numbers
 
+As statistical analysts, randomness is our lifeblood. As a language designed for statistical analysis, then, it stands to reason that R comes well-equipped to handle many common statistical operations. This includes producing random numbers a number of common distributions, random permutations, random subsets, etc.
+
+### Uniform and normal random numbers
+
+The most common kind of random numbers that people want are uniform draws and normal draws. 
+
+```{r unif/norm}
+#generate 10 U[0, 1] draws
+runif(10)
+#generate 10 U[3, 5] draws
+runif(10, min = 3, max = 5)
+
+#generate 10 N(0, 1) draws
+rnorm(10)
+#generate 10 N(3, 5) draws
+rnorm(10, mean = 3, sd = 5)
+```
+
+These examples highlight the common format of random number generators in R. To get random numbers from a distribution, there is probably a function named like `r`**`dist`**, where **`dist`** is an abbreviation for the distribution (here, **unif**orm and **norm**al). The first argument is the number of draws; the rest of the arguments are parameters.
+
+Here is a complete table of all of the common distributions built in to R, and the function used to invoke their random number generator (RNG):
+
+                   Distribution RNG          Other Parameters          Wikipedia
+ ------------------------------ ------------ ------------------------- ----------
+                           Beta `rbeta`      `shape1`, `shape2`, `ncp` https://en.wikipedia.org/wiki/Beta_distribution
+                       Binomial `rbinom`     `size`, `prob`            https://en.wikipedia.org/wiki/Binomial_distribution
+                         Cauchy `rcauchy`    `location`, `scale`       https://en.wikipedia.org/wiki/Cauchy_distribution
+                    Chi-Squared `rchisq`     `df`, `ncp`               https://en.wikipedia.org/wiki/Chi-squared_distribution
+                    Exponential `rexp`       `rate`                    https://en.wikipedia.org/wiki/Exponential_distribution
+                              F `rf`         `df1`, `df2`, `ncp`       https://en.wikipedia.org/wiki/F-distribution
+                          Gamma `rgamma`     `shape`, `rate`, `scale`  https://en.wikipedia.org/wiki/Gamma_distribution
+                      Geometric `rgeom`      `prob`                    https://en.wikipedia.org/wiki/Geometric_distribution
+                 Hypergeometric `rhyper`     `m`, `n`, `k`             https://en.wikipedia.org/wiki/Hypergeometric_distribution
+                     Log-Normal `rlnorm`     `meanlog`, `sdlog`        https://en.wikipedia.org/wiki/Log-normal_distribution
+                       Logistic `rlogis`     `location`, `scale`       https://en.wikipedia.org/wiki/Logistic_distribution
+                    Multinomial `rmultinom`  `size`, `prob`            https://en.wikipedia.org/wiki/Multinomial_distribution
+              Negative Binomial `rnbinom`    `size`, `prob`, `mu`      https://en.wikipedia.org/wiki/Negative_binomial_distribution
+                        Poisson `rpois`      `lambda`                  https://en.wikipedia.org/wiki/Poisson_distribution
+ Wilcoxon Sign Ranked Statistic `rsignrank`* `n`                       https://en.wikipedia.org/wiki/Wilcoxon_signed-rank_test
+                      Student t `rt`         `df`, `ncp`               https://en.wikipedia.org/wiki/Student%27s_t-distribution
+                        Weibull `rweibull`   `shape`, `scale`          https://en.wikipedia.org/wiki/Weibull_distribution
+ Wilcoxon Sign Ranked Statistic `rwilcox`*   `m`, `n`                  https://en.wikipedia.org/wiki/Wilcoxon_signed-rank_test
+                        Wishart `rWishart`   `df`, `Sigma`             https://en.wikipedia.org/wiki/Wishart_distribution
+
+Table: List of native distributions from built-in `stats` package
+
+In addition to RNGs, R typically has three other functions associated with a given distribution: a **d**ensity function with prefix `d`, e.g. `dnorm`, giving the PDF; a **p**robability function with prefix `p`, e.g. `pnorm`, giving the CDF; and a **q**uantile function with prefix `q`, e.g. `qnorm`, giving quantiles. 
+
+***
 ## Vectorization / `*apply`
 
+***
+## Packages
+
+***
 ## Toolkit: `?`/`dput`/`str`/`class`
 
+***
+***
+***
 # Data Basics (9 AM - 11 AM)
+
+* Missing Data
+* `table`
 
 ## Reading .csv Files
 
