--- a/iesrtutorial.Rmd
+++ b/iesrtutorial.Rmd
@@ -16,6 +16,12 @@ knitr::opts_chunk$set(echo = TRUE)
 
 First and foremost is to install R (following instructions [here](http://lib.stat.cmu.edu/R/CRAN/)) so that your computer knows how to interpret R code. Then, I highly recommend you install RStudio (following instructions [here](https://www.rstudio.com/products/rstudio/download/)), which is a powerful program for organizing your interaction with the R language (a subtle distinction, and you wouldn't really be ill-served by considering RStudio and R to be the same thing); for the jargon-hungry, RStudio is an Integrated Development Environment (IDE) for the R language.
 
+Some general guidelines for getting the most out of this workshop:
+
+ 1. **Active participation is key!** You should be running every snippet of code I go over on your own machine. As with human languages, exposure is one of the building blocks of fluency. You would be insane to think that you can osmote the ability to understand and use R code just by watching me do things on a screen. This facility takes practice, practice, hair pulling, and more practice. For those with little exposure to more advanced programming languages, today's workshop will be _very_ heavy with material. You shouldn't expect to absorb everything, but actively participating will help _a lot_.
+ 
+ 2. **Questions are openly encouraged!** As I mentioned, this will, despite my efforts to make things as straightforward as possible, inevitably be a somewhat dense workshop. So nobody should hesitate to stop me if they're lost. I am no fan of hearing myself speak, so if nobody in the audience is following me, that's a waste of everyone's time. 
+
 ***
 ***
 ***
@@ -595,14 +601,260 @@ Table: List of native distributions from built-in `stats` package
 
 In addition to RNGs, R typically has three other functions associated with a given distribution: a **d**ensity function with prefix `d`, e.g. `dnorm`, giving the PDF; a **p**robability function with prefix `p`, e.g. `pnorm`, giving the CDF; and a **q**uantile function with prefix `q`, e.g. `qnorm`, giving quantiles. 
 
+```{r dist}
+#this is mainly used for plotting, see below
+dnorm(seq(-3, 3, length.out = 30))
+
+#great for calculating p values
+pnorm(1.96)
+
+#great for getting critical values
+qnorm(c(.005, .025, .05))
+```
+
+### `sample`
+
+As often as we need random draws from uniform or normal distributions, we need to take random subsets of vectors, or to get random integers. The main function for tasks like this is `sample`, which takes 4 arguments: `x` (a vector from which to sample, or an integer representing the max of numbers from which to sample), `size` (the number of elements to sample, which defaults to `length(x)`), `replace` (whether draws are taken with replacement), and `prob` (a vector of probabilities, for weighted sampling -- default is uniform).
+
+As always, it's easiest to see with some examples:
+
+```{r sample}
+#A permutation of 1:5
+sample(5)
+#A size-3 subset of 1:5
+sample(5, 3)
+#A size-5 subset of 1:5, with replacement
+sample(5, 5, replace = TRUE)
+
+#A weighted sample of 1:5, heavily weighting 1
+sample(5, 5, replace = TRUE, prob = c(.99, .0025, .0025, .0025, .0025))
+```
+
+We can use the basic tools here to run basic randomization exercises, like rolling dice, flipping coins, or drawing cards from a deck:
+
+```{r dice/coins/cards}
+#Flip 10 coins, get the percentage heads
+flips <- sample(c("H", "T"), 10, replace = TRUE)
+mean(flips == "H")
+
+#Roll a pair of dice and add them
+sum(sample(6, 2, replace = TRUE))
+
+#create a deck of labeled cards:
+#  (I copy-pasted the text for the suits from
+#   Wikipedia, but we could have used S/H/D/C:
+#   https://en.wikipedia.org/wiki/Playing_cards_in_Unicode)
+deck <- paste0(rep(c(2:10, "J", "Q", "K", "A"), 4),      #card values
+               rep(c("♠", "♥", "♦", "♣"), each = 13)) #suits
+deck
+
+#Now draw a poker hand
+sample(deck, 5)
+```
+
+### `replicate`
+
+Full scale Monte Carlo/bootstrapping requires replicating a simulation exercise over and over. Again, R is ready and has the `replicate` function for us. Let's simulate a few poker hands to find their frequency and compare with the theoretical frequency:
+
+```{r poker}
+#It'll be easier to deal with numbers than
+#  with the fancy strings we used above
+deck_nos <- 1:52
+#Simulating a flush
+simulations <- 
+  replicate(10000, #number of repetitions/simulations
+            { #use curly braces to run a simulation that takes more than one line
+              hand <- sample(deck_nos, 5) #draw a five-card hand
+              suits <- hand %% 4 # force card number into one of 4 categories
+              length(unique(suits)) == 1 #returns TRUE if all suits are equal, FALSE else
+            }) #close braces and parentheses
+#How often does a flush happen?
+#  True frequency is 0.1965%
+mean(simulations)
+
+#What about a pair (just two cards match)?
+#  true frequency: 42%
+simulations <- 
+  replicate(10000, {
+    hand <- sample(deck_nos, 5)
+    faces <- hand %% 13 # force into one of 13 categories
+    sum(duplicated(faces)) == 1 #one pair if there's exactly _one_ match
+  })
+mean(simulations)
+```
+
+### `set.seed`
+
+Just a quick note that any time we run a simulation, it's a good idea (for _replicability_) to _set and save the random seed_! Random numbers from computers may look random, but in fact they're completely deterministic -- if we know the value of the random seed! This is a disadvantage for information security (which is only sometimes important to us as data analysts), but an advantage for academic research, where replicability is paramount.
+
+A simple example:
+```{r seed}
+set.seed(100)
+runif(1)
+
+#if we run again, we'll get a different number
+runif(1)
+#but if we re-set the seed, we'll get the same
+set.seed(100)
+runif(1)
+```
+
 ***
 ## Vectorization / `*apply`
+
+The last set of major workhorse functions in `R` are the `*apply` functions -- `sapply` and `lapply`. `apply` is also important, but I want to avoid touching on matrices today, if I can. The oft-ignored cousins are `rapply` (**r**ecursive), `tapply` (**t**agged), `mapply` (**m**ultivariate), `vapply` (**v**erified), and `eapply` (**e**nvironment). 
+
+You should think of `lapply` as **l**ist apply and `sapply` as **s**implified apply, because the former returns a `list`, and the latter returns a more simplified object (vector/matrix/array).
+
+Both of these functions are, by and large, what you should be using in R instead of a `for` loop. A `for` loop often consists of going through every element of a `list` and doing something to its contents. `for` loops exist in R, as they probably do in every langauge, but are typically much slower than what is often called a vectorized approach. We'll get into that more later, but for now I'll just leave an example of `lapply` and `sapply` in action:
+
+```{r apply}
+#pick three triplets of numbers at random
+l <- list(sample(100, 3), sample(100, 3), sample(100, 3))
+l
+
+#now find the max within each group
+lapply(l, max)
+
+#note that the output is a list. It's typically
+#  more convenient to have the output as a vector:
+sapply(l, max)
+```
 
 ***
 ## Packages
 
+One of the things that makes R truly exceptional is its vast library of user-contributed packages.
+
+R comes pre-loaded with a boat-load of the most common functions / methods of analysis. But in no way is this congenital library complete.
+
+Complementing this core of the most common operations are external _packages_, which are basically sets of functions designed to accomplish specific tasks. The entire afternoon of this workshop is devoted to gaining facility in just a few of these.
+
+Best of all, unlike some super-expensive programming languages, all of the thousands of packages available to R users (most importantly through CRAN, the **C**omprehensive **R** **A**rchive **N**etwork) are _completely free of charge_. 
+
+The two most important things to know about packages for now (we'll start using my favorite, `data.table`, shortly) is where to find them, how to install them, and how to load them.
+
+### Where to find packages
+
+Long story short: Google. Got a particular statistical technique in mind? The best R package for this is almost always the top Google result if asked correctly.
+
+How about heirarchical linear modeling (HLM)? A quick Google for "HLM R" or "heirarchical linear modeling R" both turn up some articles/tutorials/CRAN pages referencing `lmer`. 
+
+### How to install packages
+
+Just use `install.packages`!
+
+```{r install.packages, eval = FALSE}
+#we won't be able to run this, because it requires
+#  administrative priviliges, but you can do
+#  this easily on your own computer
+install.packages("lmer")
+```
+
+### How to load packages
+
+Just add it to your library!
+
+```{r library, eval = FALSE}
+#this won't run if it's not installed
+library(lmer)
+```
+
+_Et voila_! You'll now be able to run HLM in R. You can also Google "tutorial lmer" (or in general "tutorial [package name]") and you're very likely to find a trove of sites trying to help you learn the package. Most popular packages also come with worked examples available through the example function, e.g., `example(package = "lmer")`.
+
 ***
-## Toolkit: `?`/`dput`/`str`/`class`
+## Toolkit: `ls`/`rm`/`?`/`class`/`dput`/`str`
+
+Just a few more things that aren't related to statistical analysis _per se_, but which will often facilitate your coding experience.
+
+First, `ls` and `rm`, short-hand for **l**i**s**t objects and **r**e**m**ove objects. These can be useful for understanding what names you've assigned to objects, and for occasionally cleaning up the clutter of variables you'll no longer use (for the meticulously clean, but also because leaving a bunch of unused objects lying around is a great way to create irritating errors / problems with your code).
+
+Let's see all the junk we've created thus far in the workshop:
+
+```{r lsrm}
+#ls is a function, so we have to use () to call it
+ls()
+
+#one of the optional arguments to ls is to 
+#  also list some "hidden" objects:
+ls(all = TRUE)
+
+#what a mess! let's get rid of some stuff
+rm(ages, candidates, color)
+
+#ugh, this is getting boring. What about
+#  a scorched earth technique?
+rm(list = ls(all = TRUE))
+
+#after the apocalypse, nothing remains:
+ls(all = TRUE)
+```
+
+### Troubleshooting
+
+Finally, I'll leave you with some tools that are often the first place to look when trying to troubleshoot code that isn't working correctly.
+
+#### `?`
+
+`?` is the help operator in R. If you'd like to know _anything_ about any function in R, just type `?` before its name and hit enter. Let's start with the help page for `replicate` by entering `?replicate`. All help files are structured similarly, with the following common sections (I've highlighted in **bold** the most useful for troubleshooting):
+
+ 1. Description: an overview of the function(s) described on the page. `?replicate`, for example, redirects us to the help page for `lapply`, since in addition to `replicate` this page covers `lapply`, `sapply`, `vapply`, and `simplify2array` (don't worry about the last two, they're a bit more advanced and won't come up today).
+ 2. **Usage**: a generic snippet of code which shows the name and default value of every argument of every function on the page. This is very useful for understanding the ordering and naming of all the arguments to a function. `replicate`, for example, has 3 arguments, only 2 of which we used above: `n` is the number of repetitions, which has no default; `expr` is the expression to repeat (surrounded in curly braces `{}` above), which has no default; and `simplify`, which gives us control over how/whether the results are converted from a `list`, which has default `"array"`, leading to the output we saw above. 
+ 3. **Arguments**: gives a brief overview of what each function expects to receive for each argument (the type, whether it can be a vector or has to be a scalar, etc.). You shouldn't expect to fully understand everything that's being told to you here for a while, since it's pretty specific, but it can still help.
+ 4. Details: Some nitty-gritty about how the functions work, some mistakes to avoid, some of the more intricate details of how exactly the function goes about its task. Tends to be very dense and jargon-heavy.
+ 5. Value: Tells you details about the _type_ of object that you should expect to be returned as a result of running each function (e.g., we noted that `lapply` _always_ returns a `list`; this is noted in the Value section of `?replicate` in the first sentence).
+ 6. Note: Some more technical details about the function and its edge cases.
+ 7. References: Especially useful for packages -- this usually tells you where to go to find some more reading about the algorithms implemented.
+ 8. See Also: Gives some related functions which might also help accomplish similar tasks.
+ 9. **Examples**: A great place to look for some simple reproducible examples of how the functions work, with code that can be copy-pasted and run by you, the user.
+ 
+The help files are an absolute _must_ go-to reference -- it's always the first place you should check when you're stuck.
+
+#### `class`
+
+`class` simply tells you the class/type of an object in memory. You'd be surprised how often the root of an issue is simply that _you_ think a certain variable is type X (say, `numeric`), but actually R is keeping track of it as if it's type Y (frighteningly often, `factor` -- more on that later).
+
+#### `dput`
+
+`dput` is like a microscope for R objects. It deconstructs any variable in R to its atoms -- its absolute fundamental components -- and prints out what's hidden under the hood. This is especially useful because all of the most complicated objects in R tend to have an associated `print` method which renders them in a digestible form. This is great for taking a glance at a complicated object, but not useful for understanding what's going wrong with that object.
+
+Take, for example:
+
+```{r dput}
+#we'll get more into how R understands dates/times
+#  later in the day; the key takeaway here is 
+#  how R prints the object vs. how it's actually stored.
+t <- as.POSIXlt("2015-05-12")
+t
+#when we just enter the object at the console, its
+#  print method is invoked, i.e.:
+print(t)
+
+#this is a bit misleading. From what we see, it would appear
+#  that t is just a character string. However:
+t == "2015-05-15 EDT"
+
+#so, what is t? use dput
+dput(t)
+#actually, it's a rather complicated list with components
+#  describing every which thing about the date/time we entered
+```
+
+#### `str`
+
+Often the output of `dput` is far too verbose to be of real use. `str` is a similar function which gives us a more detailed look at the components of a complicated object, but with the advantage that it doesn't give us too many details; it's more like a table of contents for R objects.
+
+```{r str}
+#don't worry about what lm is yet, we'll get there soon
+y <- rnorm(1000)
+x <- rnorm(1000)
+r <- lm(y ~ x)
+str(r)
+```
+
+Whew, that was a lot! Congratulations!
+
+Now, on to the more fun and useful stuff!
 
 ***
 ***
